# terminal-farm

./: .gitignore  Makefile  README.md  hellofarm.py  pyproject.toml  run.py  terminal_farm_save.json
src/game/: main.py
src/game/domain/: fish.py  player.py  plot.py
src/game/interfaces/: game_system.py  serializable.py
src/game/model/: crop.py  plot.py
src/game/service/: crop_system.py  daycycle_system.py  event_system.py  farm_system.py  fishing_system.py  game_state.py  merchant_system.py  time_system.py  tui_system.py  weather_system.py
src/game/utils/: constants.py
src/terminal_farm/: hellofarm.py
web/: index.html  script.js  style.css
