[project]
name = "terminal-farm"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "terminal_farm", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
game = "src.terminal_farm.hellofarm:main"
